-
Bug
-
Resolution: Fixed
-
P3
-
9, 10
-
b20
-
x86
-
windows
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8206843 | 12 | Pankaj Bansal | P3 | Resolved | Fixed | team |
JDK-8206620 | 11.0.1 | Pankaj Bansal | P3 | Resolved | Fixed | b01 |
JDK-8290077 | openjdk8u352 | Olga Mikhaltcova | P3 | Resolved | Fixed | b01 |
JDK-8358251 | shenandoah8u352 | Olga Mikhaltcova | P3 | Resolved | Fixed | b01 |
JDK-8279277 | 8u331 | Anton Litvinov | P3 | Resolved | Fixed | b01 |
JDK-8274847 | 8u321 | Anton Litvinov | P3 | Resolved | Fixed | b01 |
JDK-8276895 | 8u311 | Anton Litvinov | P3 | Resolved | Fixed | b32 |
9.0.1
ADDITIONAL OS VERSION INFORMATION :
Win10 x64
EXTRA RELEVANT SYSTEM CONFIGURATION :
Java 9.0.1
A DESCRIPTION OF THE PROBLEM :
The right ALT key has extra bits set when calling KeyEvent.getModifiers() which causes ALT + ? hotkeys to fail.
Even Swing dialogs like JOptionPane.showMessageDialog() don't work (ALT+N ALT+Y don't work).
Only the right ALT is affected.
REGRESSION. Last worked in version 8u152
ADDITIONAL REGRESSION INFORMATION:
1.8_152
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Upgrade to 9 or 9.0.1 and right ALT no longer works as expected.
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Right ALT works.
ACTUAL -
Right ALT returns ALT_MASK and ALT_GRAPH_MASK bits.
REPRODUCIBILITY :
This bug can be reproduced always.
---------- BEGIN SOURCE ----------
JOptionPane.showConfirmDialog(this, "Do you wish to save file?", "Confirm", JOptionPane.YES_NO_CANCEL_OPTION)
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
Downgrade to 8.0
- backported by
-
JDK-8206620 right ALT key hotkeys no longer work in Swing components
-
- Resolved
-
-
JDK-8206843 right ALT key hotkeys no longer work in Swing components
-
- Resolved
-
-
JDK-8274847 right ALT key hotkeys no longer work in Swing components
-
- Resolved
-
-
JDK-8276895 right ALT key hotkeys no longer work in Swing components
-
- Resolved
-
-
JDK-8279277 right ALT key hotkeys no longer work in Swing components
-
- Resolved
-
-
JDK-8290077 right ALT key hotkeys no longer work in Swing components
-
- Resolved
-
-
JDK-8358251 right ALT key hotkeys no longer work in Swing components
-
- Resolved
-
- duplicates
-
JDK-8199391 Found cause and fix for bug # 8194873
-
- Closed
-
- relates to
-
JDK-8041928 MouseEvent.getModifiersEx gives wrong result
-
- Resolved
-
-
JDK-8155742 [Windows] robot.keyPress(KeyEvent.VK_ALT_GRAPH) throws java.lang.IllegalArgumentException in windows
-
- Resolved
-