8194873: right ALT key hotkeys no longer work in Swing components

Reviewed-by: serb, psadhukhan