src/java.desktop/share/classes/javax/swing/plaf/basic/BasicButtonListener.java
@@ -26,6 +26,7 @@
 package javax.swing.plaf.basic;
 
 import sun.swing.DefaultLookup;
+import sun.swing.SwingUtilities2;
 import sun.swing.UIAction;
 import java.awt.*;
 import java.awt.event.*;
@@ -156,7 +157,16 @@ public class BasicButtonListener implements MouseListener, MouseMotionListener,
             map.clear();
             map.put(KeyStroke.getKeyStroke(m, BasicLookAndFeel.getFocusAcceleratorKeyMask(), false),
                     "pressed");
+            map.put(KeyStroke.getKeyStroke(m, SwingUtilities2.setAltGraphMask
+                            (BasicLookAndFeel.getFocusAcceleratorKeyMask()),
+                    false),
+                    "pressed");
+
             map.put(KeyStroke.getKeyStroke(m, BasicLookAndFeel.getFocusAcceleratorKeyMask(), true),
+                    "released");
+            map.put(KeyStroke.getKeyStroke(m,
+                    SwingUtilities2.setAltGraphMask
+                            (BasicLookAndFeel.getFocusAcceleratorKeyMask()), true),
                     "released");
             map.put(KeyStroke.getKeyStroke(m, 0, true), "released");
         }
